fixed filtered list not showing results when it should

--- a/styles/php-integrator-symbol-viewer.less
+++ b/styles/php-integrator-symbol-viewer.less
@@ -3,7 +3,6 @@
 // See https://github.com/atom/atom-dark-ui/blob/master/styles/ui-variables.less
 // for a full listing of what's available.
 @import "ui-variables";
-@bullet-size: 1.1em;
 atom-php-integrator-symbol-viewer {
     display: block;
     margin-top: @tab-height;
@@ -25,7 +24,6 @@ atom-php-integrator-symbol-viewer {
     .public {
         font-weight: bold;
     }
-    // START bullet style
     @bullet-size: 15px;
     .bullet-container {
         position: relative;
@@ -59,7 +57,6 @@ atom-php-integrator-symbol-viewer {
     .methods-list .bullet-content {
         color: @ui-site-color-1;
     }
-    // END bullet style
     .list li {
         transition: 0.3s;
     }
